keycload added and some more fixes